hotfix-engagement alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -188,6 +188,7 @@ input {
   font-size: 14px;
   /* justify-content: center; */
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .engagement .type {
